local/frontend/cicd/k8s/local/deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: test-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:32000/frontend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
